プロフィール編集をengineersテーブルで行うため、テーブル, resource, DTOの準備
