# api_server/app/src/profiles/dto/profile-for-edit.dto.ts
@@ -1,10 +1,0 @@
-import { CurrentEmployment } from '../entities/profile.entity';
-
-export class ProfileForEditDto {
-  lastName: string;
-  firstName: string;
-  birthday: string;
-  currentEmployment: CurrentEmployment;
-  inWorkingCompanyName: string;
-  tel: string;
-}
