# api_server/app/src/profiles/dto/profile_for_edit.dto.ts
@@ -1,0 +1,19 @@
+import { ExperiencedProfession } from 'src/experiences/entities/professions.entity';
+import {
+  CurrentEmployment,
+  ExperiencedDuration,
+} from '../../engineers/entities/engineer.entity';
+
+export class ProfileForEditDto {
+  lastName: string;
+  firstName: string;
+  birthday: string;
+  currentEmployment: CurrentEmployment;
+  inWorkingCompanyName: string;
+  tel: string;
+  latestProject: string;
+  currentHourlyWage: number;
+  experiencedDuration: ExperiencedDuration;
+  selfPromotion: string;
+  experiencedProfessions: ExperiencedProfession[];
+}
