# api_server/app/src/profiles/dto/update-profile-response.dto.ts
@@ -1,24 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { CurrentEmployment } from '../entities/profile.entity';
-
-export class UpdateProfileResponseDto {
-  lastName: string;
-  firstName: string;
-  birthday: string;
-  currentEmployment: CurrentEmployment;
-  inWorkingCompanyName: string;
-  tel: string;
-  @ApiProperty({
-    example: ['姓は必須です。'],
-  })
-  errors: {
-    key?:
-      | 'lastName'
-      | 'firstName'
-      | 'birthday'
-      | 'currentEmployment'
-      | 'inWorkingCompanyName'
-      | 'tel';
-    messages?: [];
-  }[];
-}
