# api_server/app/src/profiles/dto/update-profile.dto.ts
@@ -1,10 +1,0 @@
-import { CurrentEmployment } from '../entities/profile.entity';
-
-export class UpdateProfileDto {
-  lastName!: string;
-  firstName!: string;
-  birthday!: string;
-  currentEmployment!: CurrentEmployment;
-  inWorkingCompanyName!: string;
-  tel!: string;
-}
