# api_server/app/swagger/profiles/swagger.yml
@@ -58,7 +58,7 @@ paths:
                   - statusCode
                   - message
     get:
-      operationId: fetchProfileForEdit
+      operationId: findForProfileEdit
       description: 編集対象となるログインユーザのプロフィールを取得
       parameters: []
       responses:
@@ -141,6 +141,35 @@ components:
           type: string
         tel:
           type: string
+        latestProject:
+          type: string
+        currentHourlyWage:
+          type: number
+        experiencedDuration:
+          type: string
+          enum:
+            - lessThanOneYear
+            - junior
+            - middle
+            - senior
+            - expert
+        selfPromotion:
+          type: string
+        experiencedProfessions:
+          type: array
+          items:
+            type: object
+            properties:
+              professionId:
+                type: string
+              experiencedDuration:
+                type: string
+                enum:
+                  - lessThanOneYear
+                  - junior
+                  - middle
+                  - senior
+                  - expert
       required:
         - lastName
         - firstName
@@ -148,6 +177,11 @@ components:
         - currentEmployment
         - inWorkingCompanyName
         - tel
+        - latestProject
+        - currentHourlyWage
+        - experiencedDuration
+        - selfPromotion
+        - experiencedProfessions
     UpdateProfileDto:
       description: TODO作成のrequest DTO
       type: object
@@ -168,6 +202,35 @@ components:
           type: string
         tel:
           type: string
+        latestProject:
+          type: string
+        currentHourlyWage:
+          type: number
+        experiencedDuration:
+          type: string
+          enum:
+            - lessThanOneYear
+            - junior
+            - middle
+            - senior
+            - expert
+        selfPromotion:
+          type: string
+        experiencedProfessions:
+          type: array
+          items:
+            type: object
+            properties:
+              professionId:
+                type: string
+              experiencedDuration:
+                type: string
+                enum:
+                  - lessThanOneYear
+                  - junior
+                  - middle
+                  - senior
+                  - expert
       required:
         - lastName
         - firstName
@@ -175,6 +238,11 @@ components:
         - currentEmployment
         - inWorkingCompanyName
         - tel
+        - latestProject
+        - currentHourlyWage
+        - experiencedDuration
+        - selfPromotion
+        - experiencedProfessions
     UpdateProfileResponseDto:
       description: プロフィール作成のresponse DTO
       type: object
@@ -198,6 +266,35 @@ components:
               type: string
             tel:
               type: string
+            latestProject:
+              type: string
+            currentHourlyWage:
+              type: number
+            experiencedDuration:
+              type: string
+              enum:
+                - lessThanOneYear
+                - junior
+                - middle
+                - senior
+                - expert
+            selfPromotion:
+              type: string
+            experiencedProfessions:
+              type: array
+              items:
+                type: object
+                properties:
+                  professionId:
+                    type: string
+                  experiencedDuration:
+                    type: string
+                    enum:
+                      - lessThanOneYear
+                      - junior
+                      - middle
+                      - senior
+                      - expert
         errors:
           type: array
           items:
@@ -206,13 +303,6 @@ components:
             properties:
               key:
                 type: string
-                enum:
-                  - lastName
-                  - firstName
-                  - birthday
-                  - currentEmployment
-                  - inWorkingCompanyName
-                  - tel
               messages:
                 type: array
                 items:
